Spending too much time figuring out numbering.

--- a/courses/COMP1000.md
+++ b/courses/COMP1000.md
@@ -57,7 +57,7 @@ Before you start looking at how to apply concepts from computer science using
 computers, you should get a more holistic idea of computer science by surveying
 the disciplines *within* computer science.
 
-#### Ideas for instruction
+#### Ideas for instruction {-}
 
 1. Approachable problems and problem descriptions that require *no* knowledge of
    computer science, and no use of computers on the part of the student.
@@ -65,7 +65,7 @@ the disciplines *within* computer science.
 3. Visits by co-op students: Where have they worked? Where do they want to work?
 4. Visits by faculty: What do they study? How do they study that?
 
-#### Objectives
+#### Objectives {-}
 
 By the end of this unit, students should be able to:
 
@@ -87,9 +87,9 @@ In this unit, we'll spend some time looking at the etymology of the word
 We're also going to try to put together a list of things that a computer is
 capable of computing.
 
-#### Ideas for instruction
+#### Ideas for instruction {-}
 
-#### Objectives
+#### Objectives {-}
 
 By the end of this unit, students should be able to:
 
@@ -110,9 +110,9 @@ How do they do that?
 Now we're going to spend some time thinking about how to **abstract** ideas and
 information in such a way that computers can actually do something with them.
 
-#### Ideas for instruction:
+#### Ideas for instruction {-}
 
-#### Objectives
+#### Objectives {-}
 
 By the end of this unit, students should be able to:
 
@@ -139,9 +139,9 @@ representations of what "computing" something really means. We'll meet some
 interesting characters (Turing, Boole), and, ideally, take a look at computing
 and computation from a historical and international perspective.
 
-#### Ideas for instruction
+#### Ideas for instruction {-}
 
-#### Objectives
+#### Objectives {-}
 
 By the end of this unit, students should be able to:
 
@@ -167,7 +167,7 @@ still some pretty big gaps in our body of knowledge:
   simple arithmetic, they seem to be able to make decisions --- how can we do
   something like that?
   
-#### Ideas for instruction
+#### Ideas for instruction {-}
 
 Some images that I've seen floating around building logic gates physically:
 
@@ -179,7 +179,7 @@ https://www.reddit.com/r/geek/comments/gvw4iy/logic_gates_using_dominoes/
 [Logic gates with water]:
 https://twitter.com/page_eco/status/1188749430020698112?lang=en
 
-#### Objectives
+#### Objectives {-}
 
 By the end of this unit, students should be able to:
 
@@ -208,9 +208,9 @@ is that these computers can *remember* things, and they can get *input* and
 provide *output* (we can tell them what to operate on, and they can tell us a
 result).
 
-#### Ideas for instruction
+#### Ideas for instruction {-}
 
-#### Objectives
+#### Objectives {-}
 
 By the end of this unit, students should be able to:
 
@@ -240,9 +240,9 @@ literally and directly into binary. The language that we learn will give us the
 ability to write down the instructions that we want to give to a computer in a
 way that the computer can understand and act on.
 
-#### Ideas for instruction
+#### Ideas for instruction {-}
 
-#### Objectives
+#### Objectives {-}
 
 By the end of this unit, students should be able to:
 
@@ -265,7 +265,7 @@ computer scientists know and use. The algorithms that we're going to look at are
 *so* common, in fact, that you've definitely used these algorithms to find or
 order physical things in your own life.
 
-#### Ideas for instruction
+#### Ideas for instruction {-}
 
 1. Get a collection of physical objects that you can ask students to "find"
    things by a specific property.
@@ -280,7 +280,7 @@ order physical things in your own life.
    doing? Is what they're doing in any way equivalent to what the algorithms are
    doing?
 
-#### Objectives
+#### Objectives {-}
 
 By the end of this unit, students should be able to:
 
@@ -294,9 +294,9 @@ By the end of this unit, students should be able to:
    [=comp1020-compare-searching-algorithms]
    [=comp1010-limitations-of-linear-search]
    [=comp1010-limitations-of-binary-search]
-5. [*comp1020-describe-basic-sorting-algorithms]
-6. [*comp1020-compare-sorting-algorithms]
-7. [*comp1020-complexity-of-sorting-algorithms]
+5. [*comp1500-apply-sorting] [=comp1020-describe-basic-sorting-algorithms]
+7. [*comp1020-compare-sorting-algorithms]
+8. [*comp1500-sorting-complexity] [=comp1020-complexity-of-sorting-algorithms]
 
 ### Programming (like, for real this time)
 
@@ -329,7 +329,7 @@ hardware.
 
 [micro:bit]: https://makecode.microbit.org/
 
-#### Ideas for instruction
+#### Ideas for instruction {-}
 
 1. The micro:bit environment is not strictly required here, and there are many
    web sites and environments that use effectively the same underlying
@@ -341,7 +341,7 @@ hardware.
 [Scratch]: https://scratch.mit.edu/
 [code.org]: https://code.org
 
-#### Objectives
+#### Objectives {-}
 
 By the end of this unit, students should be able to:
 
@@ -373,12 +373,12 @@ real-world situations.
 Java is **everywhere** --- it's in your pockets, powering your favourite web
 sites, crunching on scientific data, among many, *many* other places.
 
-#### Ideas for instruction
+#### Ideas for instruction {-}
 
 * The idea here is that we're transferring knowledge, much in the same way that
   the existing COMP 1020 does.
 
-#### Objectives
+#### Objectives {-}
 
 By the end of this unit, students should be able to:
 
@@ -436,9 +436,9 @@ several new tasks:
 2. Represent *collections* of primitive information (arrays), and
 3. Search through and sort collections of information.
 
-#### Ideas for instruction
+#### Ideas for instruction {-}
 
-#### Objectives
+#### Objectives {-}
 
 By the end of this unit, students should be able to:
 
@@ -469,9 +469,9 @@ complex information using a concept called "classes". We're going to use classes
 to represent complex information like physical things, and abstract things that
 aren't just simple numbers.
 
-#### Ideas for instruction
+#### Ideas for instruction {-}
 
-#### Objectives
+#### Objectives {-}
 
 By the end of this unit, students should be able to:
 
@@ -496,9 +496,9 @@ Now we're going to take a look at how to use files in our programs to work with
 going to learn how to get data out of a file and into the classes that we've
 been building.
 
-#### Ideas for instruction
+#### Ideas for instruction {-}
 
-#### Objectives
+#### Objectives {-}
 
 By the end of this unit, students should be able to:
 
@@ -520,7 +520,7 @@ first dip into data structures and abstract data types. One part of what we're
 going to do here is to compare and contrast implementations to see which one is
 best, and how to choose the best one for a specific situation.
 
-#### Ideas for instruction
+#### Ideas for instruction {-}
 
 1. Implement a linked list.
 2. Extract the interface/ADT.
@@ -529,7 +529,7 @@ best, and how to choose the best one for a specific situation.
 5. Ask students to implement a hybrid array/linked list (use fixed size arrays
    that are linked on filling).
 
-#### Objectives
+#### Objectives {-}
 
 By the end of this unit, students should be able to:
 
@@ -556,9 +556,9 @@ We're going to look at recursion from two perspectives:
 [recurrence relations]: https://en.wikipedia.org/wiki/Recurrence_relation
 [Fibonacci sequence]: https://en.wikipedia.org/wiki/Fibonacci_number
 
-#### Ideas for instruction
+#### Ideas for instruction {-}
 
-#### Objectives
+#### Objectives {-}
 
 By the end of this unit, students should be able to:
 
