More work on integrating outcomes&objectives.

--- a/courses/COMP1000.md
+++ b/courses/COMP1000.md
@@ -475,8 +475,16 @@ aren't just simple numbers.
 
 By the end of this unit, students should be able to:
 
-* 
-
+* [*comp1020-explain-basic-oo-concepts]
+* [*comp1020-create-and-use-a-class]
+* [*comp1020-evaluate-method-overloading]
+* [*comp1020-composite-objects]
+* [*comp1020-write-self-referencing-classes]
+* [*comp1020-create-and-use-subclasses]
+* [*comp1020-decide-which-property-is-referred-to-in-scope]
+* [*comp1020-upcast-and-downcast-instances]
+* [*comp1020-design-a-hierarchy-before-use]
+* [*comp1020-describe-mental-model-of-hierarchy]
 
 ### Getting lots of information
 
@@ -501,6 +509,9 @@ been building.
 #### Objectives {-}
 
 By the end of this unit, students should be able to:
+
+* [*comp1020-read-and-write-files] [=comp1020-read-from-a-file]
+* [*comp1020-tokenizing-strings]
 
 ### Data structures, abstract data types, and software design
 
@@ -533,7 +544,10 @@ best, and how to choose the best one for a specific situation.
 
 By the end of this unit, students should be able to:
 
-* [*comp1010-list-array-limitations]
+* [*comp1020-compare-data-structures] [=comp1010-list-array-limitations]
+  [=comp1020-differences-between-list-and-array]
+* [*comp1020-create-and-use-linked-list-class] [=comp1020-lists-for-collections]
+* [*comp1020-choose-a-reasonable-data-structure]
 
 ### Recursion
 
@@ -561,6 +575,10 @@ We're going to look at recursion from two perspectives:
 #### Objectives {-}
 
 By the end of this unit, students should be able to:
+
+* [*comp1020-write-recursive-code-given-algorithm]
+* [*comp1020-describe-mental-model-of-recursion-as-stack]
+* [*comp1020-explain-limitations-of-recursion]
 
 Learning objectives not covered in COMP 1000 {#missing-objectives -}
 ============================================
