Use list items instead of spans

--- a/courses/COMP1000.md
+++ b/courses/COMP1000.md
@@ -112,6 +112,8 @@ information in such a way that computers can actually do something with them.
 
 #### Ideas for instruction {-}
 
+* Have students encode images in, e.g., [ppm].
+
 #### Objectives {-}
 
 By the end of this unit, students should be able to:
@@ -127,7 +129,7 @@ By the end of this unit, students should be able to:
 9. [*comp1500-encode-an-image]
 10. [*comp1500-predict-animation]
 
-### Where did computer science even come from?
+### How can we *compute* stuff?
 
 Now we can represent information, but that's still not very smart ---
 information, by itself, doesn't *do* anything no matter how we choose to
@@ -169,10 +171,10 @@ still some pretty big gaps in our body of knowledge:
   
 #### Ideas for instruction {-}
 
-Some images that I've seen floating around building logic gates physically:
-
-* [Logic gates with dominoes]
-* [Logic gates with water]
+* Use an online circuit simulator, like <https://logic.ly>.
+* Some images that I've seen floating around building logic gates physically:
+    * [Logic gates with dominoes]
+    * [Logic gates with water]
 
 [Logic gates with dominoes]:
 https://www.reddit.com/r/geek/comments/gvw4iy/logic_gates_using_dominoes/
@@ -583,3 +585,5 @@ By the end of this unit, students should be able to:
 Learning objectives not covered in COMP 1000 {#missing-objectives -}
 ============================================
 
+The following learning objectives are covered in COMP 1010, COMP 1020, and COMP
+1500, but are *not* referred to or used in COMP 1000.
