Starting to tidy.

--- a/courses/COMP1000.md
+++ b/courses/COMP1000.md
@@ -171,8 +171,8 @@ still some pretty big gaps in our body of knowledge:
   
 #### Ideas for instruction {-}
 
-* Use an online circuit simulator, like <https://logic.ly>.
-* Some images that I've seen floating around building logic gates physically:
+1. Use an online circuit simulator, like <https://logic.ly>.
+2. Some images that I've seen floating around building logic gates physically:
     * [Logic gates with dominoes]
     * [Logic gates with water]
 
@@ -377,52 +377,57 @@ sites, crunching on scientific data, among many, *many* other places.
 
 #### Ideas for instruction {-}
 
-* The idea here is that we're transferring knowledge, much in the same way that
+1. The idea here is that we're transferring knowledge, much in the same way that
   the existing COMP 1020 does.
 
 #### Objectives {-}
 
 By the end of this unit, students should be able to:
 
-* [*comp1010-write-and-run] [=comp1500-write-program-given-solution]
-  [=comp1020-first-year-review]
-* [*comp1010-declare-use-variables] [=comp1500-variables]
-* [*comp1010-write-evaluate-arithmetic-expressions]
-  [=comp1500-visual-language-simple-sequence]
-* [*comp1010-basic-print-debugging]
-* [*comp1010-accept-use-input] [=comp1500-visual-io] [=comp1500-io]
-* [*comp1010-write-simple-functions] [=comp1500-custom-functions]
-* [*comp1010-use-floating-point]
-* [*comp1010-evaluate-float-expression]
-* [*comp1010-determine-expression-type]
-* [*comp1010-explain-difference-number-types]
-* [*comp1010-call-math-library-functions]
-* [*comp1010-create-use-strings]
-* [*comp1010-convert-numbers-strings]
-* [*comp1010-create-use-char]
-* [*comp1010-evaluate-string-expressions]
-* [*comp1010-use-different-number-types]
-* [*comp1010-casting-between-number-types]
-* [*comp1010-evaluate-casting-in-expression]
-* [*comp1010-create-and-use-boolean-variables] [~comp1500-logical-expressions]
-* [*comp1010-evaluate-boolean-expressions-logical-operators]
-  [=comp1500-logical-expressions]
-* [*comp1010-use-conditional-statements] [=comp1500-conditional-statements]
-* [*comp1010-use-relational-operators]
-* [*comp1010-evaluate-complex-boolean-expression]
-* [*comp1010-string-comparison]
-* [*comp1010-explain-float-equality]
-* [*comp1010-use-short-circuit-boolean-expressions]
-* [*comp1010-evaluate-short-circuit-boolean-expressions]
-* [*comp1010-else-if-nested-blocks] [=comp1500-conditional-statements]
-* [*comp1010-use-basic-loops] [=comp1500-looping]
-* [*comp1010-evaluate-loop-execution]
-* [*comp1010-debug-with-stack-trace]
-* [*comp1010-use-nested-loops]
-* [*comp1010-evaluate-nested-loop-execution]
-* [*comp1010-use-nested-mixed-control-structures]
-* [*comp1010-functions-with-params-return]
-* [*comp1010-accumulate-data]
+#### Write and run programs
+
+1. [*comp1010-write-and-run] [=comp1500-write-program-given-solution]
+   [=comp1020-first-year-review]
+   
+##### Create and use variables in a program
+
+2. [*comp1010-declare-use-variables] [=comp1500-variables]
+3. [*comp1010-write-evaluate-arithmetic-expressions]
+   [=comp1500-visual-language-simple-sequence]
+4. [*comp1010-basic-print-debugging]
+5. [*comp1010-accept-use-input] [=comp1500-visual-io] [=comp1500-io]
+6. [*comp1010-write-simple-functions] [=comp1500-custom-functions]
+7. [*comp1010-use-floating-point]
+8. [*comp1010-evaluate-float-expression]
+9. [*comp1010-determine-expression-type]
+10. [*comp1010-explain-difference-number-types]
+11. [*comp1010-call-math-library-functions]
+12. [*comp1010-create-use-strings]
+13. [*comp1010-convert-numbers-strings]
+14. [*comp1010-create-use-char]
+15. [*comp1010-evaluate-string-expressions]
+16. [*comp1010-use-different-number-types]
+17. [*comp1010-casting-between-number-types]
+18. [*comp1010-evaluate-casting-in-expression]
+19. [*comp1010-create-and-use-boolean-variables] [~comp1500-logical-expressions]
+20. [*comp1010-evaluate-boolean-expressions-logical-operators]
+    [=comp1500-logical-expressions]
+21. [*comp1010-use-conditional-statements] [=comp1500-conditional-statements]
+22. [*comp1010-use-relational-operators]
+23. [*comp1010-evaluate-complex-boolean-expression]
+24. [*comp1010-string-comparison]
+25. [*comp1010-explain-float-equality]
+26. [*comp1010-use-short-circuit-boolean-expressions]
+27. [*comp1010-evaluate-short-circuit-boolean-expressions]
+28. [*comp1010-else-if-nested-blocks] [=comp1500-conditional-statements]
+29. [*comp1010-use-basic-loops] [=comp1500-looping]
+30. [*comp1010-evaluate-loop-execution]
+31. [*comp1010-debug-with-stack-trace]
+32. [*comp1010-use-nested-loops]
+33. [*comp1010-evaluate-nested-loop-execution]
+34. [*comp1010-use-nested-mixed-control-structures]
+35. [*comp1010-functions-with-params-return]
+36. [*comp1010-accumulate-data]
 
 ### *Implementing* searching and sorting
 
@@ -444,18 +449,20 @@ several new tasks:
 
 By the end of this unit, students should be able to:
 
-* [*comp1010-represent-data-collections]
-* [*comp1010-create-use-arrays]
-* [*comp1010-compare-strings-arrays]
-* [*comp1010-list-default-array-values-for-type]
-* [*comp1010-compare-values-with-null]
-* [*comp1010-copy-array-contents]
-* [*comp1010-compare-array-contents]
-* [*comp1010-explain-differences-between-primitives-and-arrays]
-* [*comp1010-functions-with-array-params-return]
-* [*comp1010-implement-linear-search] [~comp1020-write-binary-and-linear-search]
-* [*comp1010-implement-binary-search] [~comp1020-write-binary-and-linear-search]
-* [*comp1020-write-sorting-algorithms]
+1. [*comp1010-represent-data-collections]
+2. [*comp1010-create-use-arrays]
+3. [*comp1010-compare-strings-arrays]
+4. [*comp1010-list-default-array-values-for-type]
+5. [*comp1010-compare-values-with-null]
+6. [*comp1010-copy-array-contents]
+7. [*comp1010-compare-array-contents]
+8. [*comp1010-explain-differences-between-primitives-and-arrays]
+9. [*comp1010-functions-with-array-params-return]
+10. [*comp1010-implement-linear-search]
+    [~comp1020-write-binary-and-linear-search]
+11. [*comp1010-implement-binary-search]
+    [~comp1020-write-binary-and-linear-search]
+12. [*comp1020-write-sorting-algorithms]
 
 ### Representing complex information
 
@@ -477,16 +484,16 @@ aren't just simple numbers.
 
 By the end of this unit, students should be able to:
 
-* [*comp1020-explain-basic-oo-concepts]
-* [*comp1020-create-and-use-a-class]
-* [*comp1020-evaluate-method-overloading]
-* [*comp1020-composite-objects]
-* [*comp1020-write-self-referencing-classes]
-* [*comp1020-create-and-use-subclasses]
-* [*comp1020-decide-which-property-is-referred-to-in-scope]
-* [*comp1020-upcast-and-downcast-instances]
-* [*comp1020-design-a-hierarchy-before-use]
-* [*comp1020-describe-mental-model-of-hierarchy]
+1. [*comp1020-explain-basic-oo-concepts]
+2. [*comp1020-create-and-use-a-class]
+3. [*comp1020-evaluate-method-overloading]
+4. [*comp1020-composite-objects]
+5. [*comp1020-write-self-referencing-classes]
+6. [*comp1020-create-and-use-subclasses]
+7. [*comp1020-decide-which-property-is-referred-to-in-scope]
+8. [*comp1020-upcast-and-downcast-instances]
+9. [*comp1020-design-a-hierarchy-before-use]
+10. [*comp1020-describe-mental-model-of-hierarchy]
 
 ### Getting lots of information
 
@@ -512,8 +519,8 @@ been building.
 
 By the end of this unit, students should be able to:
 
-* [*comp1020-read-and-write-files] [=comp1020-read-from-a-file]
-* [*comp1020-tokenizing-strings]
+1. [*comp1020-read-and-write-files] [=comp1020-read-from-a-file]
+2. [*comp1020-tokenizing-strings]
 
 ### Data structures, abstract data types, and software design
 
@@ -546,10 +553,11 @@ best, and how to choose the best one for a specific situation.
 
 By the end of this unit, students should be able to:
 
-* [*comp1020-compare-data-structures] [=comp1010-list-array-limitations]
-  [=comp1020-differences-between-list-and-array]
-* [*comp1020-create-and-use-linked-list-class] [=comp1020-lists-for-collections]
-* [*comp1020-choose-a-reasonable-data-structure]
+1. [*comp1020-compare-data-structures] [=comp1010-list-array-limitations]
+   [=comp1020-differences-between-list-and-array]
+2. [*comp1020-create-and-use-linked-list-class]
+   [=comp1020-lists-for-collections]
+3. [*comp1020-choose-a-reasonable-data-structure]
 
 ### Recursion
 
@@ -578,12 +586,10 @@ We're going to look at recursion from two perspectives:
 
 By the end of this unit, students should be able to:
 
-* [*comp1020-write-recursive-code-given-algorithm]
-* [*comp1020-describe-mental-model-of-recursion-as-stack]
-* [*comp1020-explain-limitations-of-recursion]
+1. [*comp1020-write-recursive-code-given-algorithm]
+2. [*comp1020-describe-mental-model-of-recursion-as-stack]
+3. [*comp1020-explain-limitations-of-recursion]
 
 Learning objectives not covered in COMP 1000 {#missing-objectives -}
 ============================================
 
-The following learning objectives are covered in COMP 1010, COMP 1020, and COMP
-1500, but are *not* referred to or used in COMP 1000.
