--- a/courses/COMP1020.md
+++ b/courses/COMP1020.md
@@ -53,50 +53,61 @@ By the end of these units, students should be able to:
 
 By the end of this unit, students should be able to:
 
-1. Choose and use a text editor/IDE to write Java programs. :program:
-2. Download, install, and configure the JDK. :program:
+1. Choose and use a text editor/IDE to write Java programs.
+   :program#choose-an-ide:
+2. Download, install, and configure the JDK. :program#download-install-jdk:
 3. Compile and run a Java program from within an IDE (DrJava is noted
-   specifically). :program:
+   specifically). :program#compile-and-run-from-ide:
 4. Compile and run a Java program from the command-line on a remote machine
-   (`aviary.cs.umanitoba.ca` is noted specifically). :program:
-5. Write, compile, and run a basic Java program with a `main` method. :program:
+   (`aviary.cs.umanitoba.ca` is noted specifically).
+   :program#compile-and-run-command-line:
+5. Write, compile, and run a basic Java program with a `main` method.
+   :program#write-compile-run-hello-world-java: 
 
 ### Create and use variables in a program
 
 By the end of this unit, students should be able to:
 
 1. Observe and apply course-specific naming conventions when naming classes,
-   methods, and variables. :program:
-2. Use `String` values and variables in a program. :program:
-3. Use primitive type values and variables in a program. :program:
+   methods, and variables. :program#use-naming-conventions:
+2. Use `String` values and variables in a program. :program#use-strings:
+3. Use primitive type values and variables in a program. :program#use-primitives:
 4. Use the `+` operator in different contexts (e.g., primitive types,
-   concatenation with `String`). :program:
+   concatenation with `String`). :program#use-add-concat-operator:
 5. Predict the type of the result of an expression using different primitive
-   type values (e.g., `int` + `double` &rarr; `double`). :evaluate:
+   type values (e.g., `int` + `double` &rarr; `double`).
+   :evaluate#predict-type-of-expression:
 6. Use a variety of other arithmetic operators in expressions. (&plus;, &minus;,
-   &times;, &divide;, mod). :program:
-7. Declare, assign, and use variables in a Java program. :program:
-8. Choose meaningful but concise names for variables. :communicate:
-9. Use comments to provide additional context for code. :communicate:
+   &times;, &divide;, mod). :program#use-arithmetic-operators:
+7. Declare, assign, and use variables in a Java program.
+   :program#use-variables-in-java:
+8. Choose meaningful but concise names for variables.
+   :communicate#choose-concise-variable-names:
+9. Use comments to provide additional context for code.
+   :communicate#use-comments:
 10. Write an assignment statement (i.e., `int x = ...;`) where the type of the
     variable on the left side is *compatible with* the result of the expression
-    on the right. :program:
+    on the right. :program#assignment-expressions-with-types:
     
 ### Create and use methods in a program
 
 By the end of this unit, students should be able to:
 
 1. Name the parts of a method definition (e.g., signature, body, modifiers,
-   return type, name, parameters). :communicate:
-2. Write and call methods in a Java program. :program:
-3. Declare and use file-scoped (`static`) variables in a Java program. :program:
-4. Declare and use named constants in a Java program. :program:
+   return type, name, parameters). :communicate#name-parts-of-method:
+2. Write and call methods in a Java program.
+   :program#write-and-call-java-methods:
+3. Declare and use file-scoped (`static`) variables in a Java program.
+   :program#file-scoped-static-variables:
+4. Declare and use named constants in a Java program.
+   :program#use-named-constants-java:
 
 ### Get and use input in a program
 
 By the end of this unit, students should be able to:
 
-1. Use the `Scanner` class to get input on standard input. :program: &2160&
+1. Use the `Scanner` class to get input on standard input.
+   :program#input-with-scanner: &2160&
     1. Get tokenized input with specific types (e.g., `nextInt()`, `nextLong()`,
        `nextDouble()`, etc)
     2. Get line-based input with `nextLine()`.
@@ -106,66 +117,72 @@ By the end of this unit, students should be able to:
 By the end of this unit, students should be able to:
 
 1. Convert from `String` to primitive types using the `TYPE.parseTYPE()` family
-   of methods (e.g., `Integer.parseInt()`) :program:
+   of methods (e.g., `Integer.parseInt()`) :program#strings-to-primitives:
 2. Convert from primitive types to `String` using the `TYPE.toString()` family
-   of methods (e.g., `Integer.toString()`). :program:
+   of methods (e.g., `Integer.toString()`). :program#primitives-to-strings:
 3. Convert between primitive types with implicit upcasting and explicit
-   downcasting. :program:
+   downcasting. :program#use-upcasting-downcasting:
 
 ### Write code concisely
 
 By the end of this unit, students should be able to:
 
 1. Increment and decrement number-type variables with the `++` and `--`
-   operators, both prefix and postfix. :program:
+   operators, both prefix and postfix.
+   :program#use-increment-decrement-operators:
 2. Increment and decrement number-type variables with the `+=`, `-=`, `*=`, and
-   `\=` operators. :program:
+   `\=` operators. :program#use-compound-operators:
 3. Write and use Boolean expressions with logical and relational operators.
-   :program:
-4. Test `String`s for equality using the `.equals` method. :program:
+   :program#use-boolean-expressions-with-operators:
+4. Test `String`s for equality using the `.equals` method.
+   :program#testing-equality-of-strings:
 5. Write concise Boolean expressions (i.e., prefer to use `value` instead of
-   `value == true` and `!value` instead of `value != true`). :program:
+   `value == true` and `!value` instead of `value != true`).
+   :program#concise-boolean-expressions:
     
 ### Write and use control structures in a program
 
 By the end of this unit, students should be able to:
 
-1. Write and use conditional statements. :program:
-2. Write and use loop structures (`for`, `while`, and `do`/`while`). :program:
-3. Use `break` and `continue` in a loop structure. :program:
+1. Write and use conditional statements. :program#conditional-statements:
+2. Write and use loop structures (`for`, `while`, and `do`/`while`).
+   :program#loop-structures:
+3. Use `break` and `continue` in a loop structure. :program#break-continue:
 
 ### Create and use `String` values in a program
 
 By the end of this unit, students should be able to:
 
 1. Use the escape character `\` to place special characters in `String` literals
-   (e.g., `"`, `\n`, `\t`). :program:
+   (e.g., `"`, `\n`, `\t`). :program#escape-characters:
 2. Use `String` methods on an instance of a `String` (e.g., `equals`,
-   `equalsIgnoreCase`, `length`, `charAt`). :program:
+   `equalsIgnoreCase`, `length`, `charAt`). :program#string-methods:
     
 ### Use a language library
 
 By the end of this unit, students should be able to:
 
 1. Use methods and constants from the `Math` library (e.g., `pow`, `min`, `max`,
-   `PI`, `random`). :program:
+   `PI`, `random`). :program#math-functions:
 
 ### Create and use arrays in a program
 
 By the end of this unit, students should be able to:
 
-1. Create and use arrays in a program. :program:
+1. Create and use arrays in a program. :program#use-arrays:
 2. List the default values in an array for different types (e.g., `int` &rarr;
-   `0`, `String` &rarr; `null`). :communicate:
-3. Get the number of elements in an array with the `.length` property. :program:
-4. Loop over all of the elements in an array with a `for` loop. :program:
+   `0`, `String` &rarr; `null`). :communicate#list-default-array-values:
+3. Get the number of elements in an array with the `.length` property.
+   :program#count-elements-in-array:
+4. Loop over all of the elements in an array with a `for` loop.
+   :program#loop-over-array:
 5. Use utility methods from the `Arrays` class (e.g., `Arrays.toString`).
-   :program:
-6. Copy the contents of an array to a new array. :program:
+   :program#use-arrays-class:
+6. Copy the contents of an array to a new array. :program#copy-an-array:
 7. Explain why simple assignment does not copy the contents of an array.
-   :communicate:
+   :communicate#explain-necessity-of-loop-copy-array:
 8. Use a "for each"-style loop in Java (i.e., `for (int elem : data)`).
-   :program:
+   :program#foreach-java-loops:
 
 OOP Basics 1
 ------------
