Support equivalencies with hard-coded outcomes.

--- a/courses/COMP1020.md
+++ b/courses/COMP1020.md
@@ -57,7 +57,7 @@ By the end of this unit, students should be able to:
    :program#choose-an-ide:
 2. Download, install, and configure the JDK. :program#download-install-jdk:
 3. Compile and run a Java program from within an IDE (DrJava is noted
-   specifically). :program#compile-and-run-from-ide:
+   specifically). :program#compile-and-run-from-ide: [=comp1010-write-and-run]
 4. Compile and run a Java program from the command-line on a remote machine
    (`aviary.cs.umanitoba.ca` is noted specifically).
    :program#compile-and-run-command-line:
