References between 1010 and 1020.

--- a/courses/COMP1010.md
+++ b/courses/COMP1010.md
@@ -43,8 +43,8 @@ By the end of this unit, students should be able to:
 1. Use an integrated development environment (IDE) to write and run a simple,
    linear program using a procedural programming language.
    :program#write-and-run: 
-    1. Use *literal values* in a program.
-    2. Describe what code does using *comments*.
+    1. Use *literal values* in a program. :program#use-literals:
+    2. Describe what code does using *comments*. :program#comments:
   
 IDE
 : Software that simplifies writing software in a *specific* programming
