--- a/courses/COMP1020.md
+++ b/courses/COMP1020.md
@@ -62,7 +62,7 @@ By the end of this unit, students should be able to:
    (`aviary.cs.umanitoba.ca` is noted specifically).
    :program#compile-and-run-command-line:
 5. Write, compile, and run a basic Java program with a `main` method.
-   :program#write-compile-run-hello-world-java: 
+   :program#write-compile-run-hello-world-java: [=comp1010-write-and-run]
 
 ### Create and use variables in a program
 
@@ -71,20 +71,25 @@ By the end of this unit, students should be able to:
 1. Observe and apply course-specific naming conventions when naming classes,
    methods, and variables. :program#use-naming-conventions:
 2. Use `String` values and variables in a program. :program#use-strings:
-3. Use primitive type values and variables in a program. :program#use-primitives:
+   [=comp1010-create-use-strings]
+3. Use primitive type values and variables in a program.
+   :program#use-primitives: [=comp1010-declare-use-variables]
 4. Use the `+` operator in different contexts (e.g., primitive types,
    concatenation with `String`). :program#use-add-concat-operator:
+   [=comp1010-create-use-strings]
 5. Predict the type of the result of an expression using different primitive
    type values (e.g., `int` + `double` &rarr; `double`).
-   :evaluate#predict-type-of-expression:
+   :evaluate#predict-type-of-expression: [=comp1010-determine-expression-type]
 6. Use a variety of other arithmetic operators in expressions. (&plus;, &minus;,
    &times;, &divide;, mod). :program#use-arithmetic-operators:
+   [=comp1010-write-evaluate-arithmetic-expressions]
 7. Declare, assign, and use variables in a Java program.
-   :program#use-variables-in-java:
+   :program#use-variables-in-java: [=comp1010-declare-use-variables]
 8. Choose meaningful but concise names for variables.
    :communicate#choose-concise-variable-names:
+   [=comp1010-choose-meaningful-names]
 9. Use comments to provide additional context for code.
-   :communicate#use-comments:
+   :communicate#use-comments: [=comp1010-comments]
 10. Write an assignment statement (i.e., `int x = ...;`) where the type of the
     variable on the left side is *compatible with* the result of the expression
     on the right. :program#assignment-expressions-with-types:
@@ -96,18 +101,18 @@ By the end of this unit, students should be able to:
 1. Name the parts of a method definition (e.g., signature, body, modifiers,
    return type, name, parameters). :communicate#name-parts-of-method:
 2. Write and call methods in a Java program.
-   :program#write-and-call-java-methods:
+   :program#write-and-call-java-methods: [=comp1010-write-simple-functions]
 3. Declare and use file-scoped (`static`) variables in a Java program.
-   :program#file-scoped-static-variables:
+   :program#file-scoped-static-variables: [~comp1010-use-global-variable]
 4. Declare and use named constants in a Java program.
-   :program#use-named-constants-java:
+   :program#use-named-constants-java: [=comp1010-use-named-constants]
 
 ### Get and use input in a program
 
 By the end of this unit, students should be able to:
 
 1. Use the `Scanner` class to get input on standard input.
-   :program#input-with-scanner: &2160&
+   :program#input-with-scanner: &2160& [~comp1010-accept-use-input]
     1. Get tokenized input with specific types (e.g., `nextInt()`, `nextLong()`,
        `nextDouble()`, etc)
     2. Get line-based input with `nextLine()`.
@@ -118,10 +123,12 @@ By the end of this unit, students should be able to:
 
 1. Convert from `String` to primitive types using the `TYPE.parseTYPE()` family
    of methods (e.g., `Integer.parseInt()`) :program#strings-to-primitives:
+   [=comp1010-convert-numbers-strings]
 2. Convert from primitive types to `String` using the `TYPE.toString()` family
    of methods (e.g., `Integer.toString()`). :program#primitives-to-strings:
 3. Convert between primitive types with implicit upcasting and explicit
    downcasting. :program#use-upcasting-downcasting:
+   [=comp1010-casting-between-number-types]
 
 ### Write code concisely
 
@@ -129,24 +136,29 @@ By the end of this unit, students should be able to:
 
 1. Increment and decrement number-type variables with the `++` and `--`
    operators, both prefix and postfix.
-   :program#use-increment-decrement-operators:
+   :program#use-increment-decrement-operators: [=comp1010-use-compound-operator]
 2. Increment and decrement number-type variables with the `+=`, `-=`, `*=`, and
    `\=` operators. :program#use-compound-operators:
+   [=comp1010-use-compound-operator]
 3. Write and use Boolean expressions with logical and relational operators.
    :program#use-boolean-expressions-with-operators:
+   [=comp1010-use-relational-operators]
+   [=comp1010-evaluate-complex-boolean-expression]
 4. Test `String`s for equality using the `.equals` method.
    :program#testing-equality-of-strings:
 5. Write concise Boolean expressions (i.e., prefer to use `value` instead of
    `value == true` and `!value` instead of `value != true`).
    :program#concise-boolean-expressions:
+   [=comp1010-no-extraneous-boolean-comparison]
     
 ### Write and use control structures in a program
 
 By the end of this unit, students should be able to:
 
 1. Write and use conditional statements. :program#conditional-statements:
+   [=comp1010-use-conditional-statements]
 2. Write and use loop structures (`for`, `while`, and `do`/`while`).
-   :program#loop-structures:
+   :program#loop-structures: [=comp1010-use-basic-loops]
 3. Use `break` and `continue` in a loop structure. :program#break-continue:
 
 ### Create and use `String` values in a program
@@ -157,6 +169,7 @@ By the end of this unit, students should be able to:
    (e.g., `"`, `\n`, `\t`). :program#escape-characters:
 2. Use `String` methods on an instance of a `String` (e.g., `equals`,
    `equalsIgnoreCase`, `length`, `charAt`). :program#string-methods:
+   [=comp1010-evaluate-string-expressions]
     
 ### Use a language library
 
@@ -164,23 +177,28 @@ By the end of this unit, students should be able to:
 
 1. Use methods and constants from the `Math` library (e.g., `pow`, `min`, `max`,
    `PI`, `random`). :program#math-functions:
+   [=comp1010-call-math-library-functions]
 
 ### Create and use arrays in a program
 
 By the end of this unit, students should be able to:
 
 1. Create and use arrays in a program. :program#use-arrays:
+   [=comp1010-create-use-arrays]
 2. List the default values in an array for different types (e.g., `int` &rarr;
    `0`, `String` &rarr; `null`). :communicate#list-default-array-values:
+   [=comp1010-list-default-array-values-for-type]
 3. Get the number of elements in an array with the `.length` property.
-   :program#count-elements-in-array:
+   :program#count-elements-in-array: [=comp1010-create-use-arrays]
 4. Loop over all of the elements in an array with a `for` loop.
-   :program#loop-over-array:
+   :program#loop-over-array: [=comp1010-create-use-arrays]
 5. Use utility methods from the `Arrays` class (e.g., `Arrays.toString`).
    :program#use-arrays-class:
 6. Copy the contents of an array to a new array. :program#copy-an-array:
+   [=comp1010-copy-array-contents]
 7. Explain why simple assignment does not copy the contents of an array.
    :communicate#explain-necessity-of-loop-copy-array:
+   [=comp1010-explain-differences-between-primitives-and-arrays]
 8. Use a "for each"-style loop in Java (i.e., `for (int elem : data)`).
    :program#foreach-java-loops:
 
