--- a/blog/June 18, 2020.md
+++ b/blog/June 18, 2020.md
@@ -9,7 +9,7 @@ Things for today:
             * [X] Fix the script that adds the equivalencies.
     * [ ] Flesh out "Ideas for instruction" in all units, or remove it.
     * [ ] Confirm that you're OK with all missing outcomes.
-* [ ] Build a Python module with supplementary panflute utilities.
+* [X] Build a Python module with supplementary panflute utilities.
 * [X] The Python scripts are painfully slow. Make them faster.
 
 ---
@@ -31,6 +31,11 @@ https://stackoverflow.com/questions/39028978/copying-nested-custom-objects-alter
 As I'm adding equivalencies between 1010 and 1020, I'm left wondering about one
 thing: should I use the same machinery that I'm using for 1000? That is: should
 I just straight-up use the `[*` syntax for these things?
+
+Part of my concern here is that now that I've IDed the objectives, I've got a
+bunch of objectives in the "missing" section that are duplicated. I either need
+to manually apply the transitive relationship, or just use the `[*` syntax to
+auto-write those outcomes for COMP1020.
 
 ---
 
